[gd_scene load_steps=7 format=3 uid="uid://bx6p86d1bvy3p"]

[ext_resource type="Texture2D" uid="uid://bc674tv25vskc" path="res://game/assets/icon.svg" id="1_akxfa"]
[ext_resource type="Script" path="res://game/mobs/Enemy.gd" id="1_m2cmm"]
[ext_resource type="PackedScene" uid="uid://c2eyaos2ibwsw" path="res://Healthbar.tscn" id="2_8v7qf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gi86x"]
size = Vector2(34.75, 32)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3f2om"]
radius = 59.75
height = 283.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cp4dn"]
size = Vector2(32, 31)

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_m2cmm")

[node name="Temp Hitbox" type="Area2D" parent="." groups=["Enemy"]]
position = Vector2(-1.5, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Temp Hitbox"]
position = Vector2(1.125, 1)
shape = SubResource("RectangleShape2D_gi86x")

[node name="Player Detection" type="Area2D" parent="."]
visible = false
position = Vector2(0.25, 0.75)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player Detection"]
visible = false
rotation = -1.5708
shape = SubResource("CapsuleShape2D_3f2om")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 0)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_akxfa")

[node name="Edge Detection" type="Node2D" parent="."]

[node name="RayCast_R" type="RayCast2D" parent="Edge Detection"]
position = Vector2(-20, 1)
target_position = Vector2(0, 24)

[node name="RayCast_L" type="RayCast2D" parent="Edge Detection"]
position = Vector2(19, 1)
target_position = Vector2(1, 27)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, -0.5)
shape = SubResource("RectangleShape2D_cp4dn")

[node name="Healthbar" parent="." instance=ExtResource("2_8v7qf")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -19.0
offset_top = -27.0
offset_right = 17.0
offset_bottom = -19.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="body_entered" from="Temp Hitbox" to="." method="_on_temp_hitbox_body_entered"]
[connection signal="body_entered" from="Player Detection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="Player Detection" to="." method="_on_player_detection_body_exited"]
